Completed data preparation

--- a/cleaningProcess.ipynb
+++ b/cleaningProcess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "167b6fb2",
+   "id": "19fc8bd1",
    "metadata": {},
    "source": [
     "# Data Cleaning and Preparation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc30654",
+   "id": "5bd9fc84",
    "metadata": {},
    "source": [
     "## Step 1: Inputing the Dataset"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f90694e",
+   "id": "be7f60d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4ab9edeb",
+   "execution_count": 2,
+   "id": "a8d694ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a2c1636",
+   "id": "87d54eb9",
    "metadata": {},
    "source": [
     "## Step 2: Preview and basic information of  Dataset"
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7a66cbb9",
+   "execution_count": 3,
+   "id": "cd7b0f9f",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "[1048575 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d43cbf91",
+   "execution_count": 4,
+   "id": "99577e88",
    "metadata": {},
    "outputs": [
     {
@@ -350,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "20901130",
+   "execution_count": 5,
+   "id": "8827dd4b",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "max         1.000000e+02  1.000000e+00   2.100000e+01  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "969e12fd",
+   "id": "fd1acc7d",
    "metadata": {},
    "source": [
     "## Step 3: Understanding Columns "
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194dac83",
+   "id": "406b2307",
    "metadata": {},
    "source": [
     " \n",
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b4162c",
+   "id": "2deebaca",
    "metadata": {},
    "source": [
     "- order_id - unique identity of order\n",
@@ -573,19 +573,19 @@
     "\n",
     "- order_number - Number OF THE ORDER\n",
     "\n",
-    "- order_dow -Day of the Week the order was made(either 0,1,2,3,4,5,6)\n",
+    "- order_dow -Day of the Week the order was made(either 0,1,2,3,4,5,6) - '0' represents Monday - '6' represents Sunday.\n",
     "\n",
-    "- order_hour_of_day - Hour of the day order was made\n",
+    "- order_hour_of_day - Hour of the day order was made(24hour clock system)\n",
     "\n",
-    "- days_since_prior_order - Days since prior order ; 0 for new customers, the rest depending on last day\n",
+    "- days_since_prior_order - Days since prior order ; 0 for new customers, the rest depending on how many days since prior order.\n",
     "\n",
     "- product_id - unique ID of product that is part of an order\n",
     "\n",
     "- add_to_cart_order - Number of specific products added to cart as part of the order\n",
     "\n",
-    "- reordered - If the re-order took place ( is in binary of 0 or 1)\n",
+    "- reordered - If the re-order of a specific product took place ( is in binary of 0 or 1 - '0' for False and '1' for True)\n",
     "\n",
-    "- department_id - specific department identity that a product is part of\n",
+    "- department_id - specific department identity that a product ordered is part of.\n",
     "\n",
     "- department - name of department\n",
     "\n",
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7e3339c",
+   "id": "282e1e9b",
    "metadata": {},
    "source": [
     "## Step 4: Checking for duplicates"
@@ -602,8 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e880716c",
+   "execution_count": 6,
+   "id": "f7701080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,8 +612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5c10ee52",
+   "execution_count": 7,
+   "id": "2bb7a7b5",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "Length: 1048575, dtype: bool"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,8 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5970e97c",
+   "execution_count": 8,
+   "id": "63253901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee37a68",
+   "id": "2d97562f",
    "metadata": {},
    "source": [
     "## Step 5: Missing Values"
@@ -664,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6ee0184c",
+   "execution_count": 9,
+   "id": "8438de19",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6c3c98",
+   "id": "b8d56ae7",
    "metadata": {},
    "source": [
     "- In above, all columns but 1 have zero missing values.\n",
@@ -719,8 +719,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b6062a79",
+   "execution_count": 10,
+   "id": "69f32a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,272 +735,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "81109440",
+   "execution_count": null,
+   "id": "9c2bbc6e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>order_number</th>\n",
-       "      <th>order_dow</th>\n",
-       "      <th>order_hour_of_day</th>\n",
-       "      <th>days_since_prior_order</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>add_to_cart_order</th>\n",
-       "      <th>reordered</th>\n",
-       "      <th>department_id</th>\n",
-       "      <th>department</th>\n",
-       "      <th>product_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2425083</td>\n",
-       "      <td>49125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>pantry</td>\n",
-       "      <td>baking ingredients</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2425083</td>\n",
-       "      <td>49125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>91</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>dairy eggs</td>\n",
-       "      <td>soy lactosefree</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2425083</td>\n",
-       "      <td>49125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>dairy eggs</td>\n",
-       "      <td>butter</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2425083</td>\n",
-       "      <td>49125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>83</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>produce</td>\n",
-       "      <td>fresh vegetables</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2425083</td>\n",
-       "      <td>49125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>83</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>produce</td>\n",
-       "      <td>fresh vegetables</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>671875</td>\n",
-       "      <td>33287</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>69</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>canned goods</td>\n",
-       "      <td>soup broth bouillon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>671875</td>\n",
-       "      <td>33287</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>91</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>dairy eggs</td>\n",
-       "      <td>soy lactosefree</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>671875</td>\n",
-       "      <td>33287</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>61</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>snacks</td>\n",
-       "      <td>cookies cakes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>671875</td>\n",
-       "      <td>33287</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>30</td>\n",
-       "      <td>61</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>snacks</td>\n",
-       "      <td>cookies cakes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>419699</td>\n",
-       "      <td>24832</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>84</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>dairy eggs</td>\n",
-       "      <td>milk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1048575 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         order_id  user_id  order_number  order_dow  order_hour_of_day  \\\n",
-       "0         2425083    49125             1          2                 18   \n",
-       "1         2425083    49125             1          2                 18   \n",
-       "2         2425083    49125             1          2                 18   \n",
-       "3         2425083    49125             1          2                 18   \n",
-       "4         2425083    49125             1          2                 18   \n",
-       "...           ...      ...           ...        ...                ...   \n",
-       "1048570    671875    33287             5          6                 15   \n",
-       "1048571    671875    33287             5          6                 15   \n",
-       "1048572    671875    33287             5          6                 15   \n",
-       "1048573    671875    33287             5          6                 15   \n",
-       "1048574    419699    24832             4          0                 10   \n",
-       "\n",
-       "         days_since_prior_order  product_id  add_to_cart_order  reordered  \\\n",
-       "0                             0          17                  1          0   \n",
-       "1                             0          91                  2          0   \n",
-       "2                             0          36                  3          0   \n",
-       "3                             0          83                  4          0   \n",
-       "4                             0          83                  5          0   \n",
-       "...                         ...         ...                ...        ...   \n",
-       "1048570                      30          69                 12          1   \n",
-       "1048571                      30          91                 13          1   \n",
-       "1048572                      30          61                 14          1   \n",
-       "1048573                      30          61                 15          1   \n",
-       "1048574                       2          84                  1          1   \n",
-       "\n",
-       "         department_id    department         product_name  \n",
-       "0                   13        pantry   baking ingredients  \n",
-       "1                   16    dairy eggs      soy lactosefree  \n",
-       "2                   16    dairy eggs               butter  \n",
-       "3                    4       produce     fresh vegetables  \n",
-       "4                    4       produce     fresh vegetables  \n",
-       "...                ...           ...                  ...  \n",
-       "1048570             15  canned goods  soup broth bouillon  \n",
-       "1048571             16    dairy eggs      soy lactosefree  \n",
-       "1048572             19        snacks        cookies cakes  \n",
-       "1048573             19        snacks        cookies cakes  \n",
-       "1048574             16    dairy eggs                 milk  \n",
-       "\n",
-       "[1048575 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df"
+    "#Confirmation\n",
+    "\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3509980f",
+   "metadata": {},
+   "source": [
+    "# Above is the basic data cleaning and Preparation Process.\n",
+    "\n",
+    " - It is now ready for Exploration in order to draw insights in the : \"Manipulation_with_Python.ipynb\" file. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89e6e3b",
+   "metadata": {},
+   "source": [
+    "## Step 6: Generate Cleaned Dataset csv file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85448583",
+   "id": "7eef713f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_excel(r'C:\\Users\\GARETH TIROP\\Desktop\\Data Science and Analytics Docs\\Cleaned_Ecommerce_Dataset.xlsx', index = False)\n",
+    "            \n",
+    "print(\"Generated cleaned Excel file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8abd1b62",
    "metadata": {},
    "outputs": [],
    "source": []
