Started Customer Segmentation

--- a/Manipulation_with_Python.ipynb
+++ b/Manipulation_with_Python.ipynb
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b08dfa50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'C:\\Users\\GARETH TIROP\\Desktop\\Data Science and Analytics Docs\\Cleaned_Ecommerce_Dataset.xlsx')"
+    "df = pd.read_excel(r'C:\\Users\\GARETH TIROP\\Desktop\\Data Science and Analytics Docs\\Cleaned_Ecommerce_Dataset.xlsx',chunksize = 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d74c7cc2",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "[1048575 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,19 +347,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7c4909fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Unique values in 'days_since_prior_order' column are: \n",
+      " 30    110629\n",
+      "7     109259\n",
+      "6      80867\n",
+      "0      78837\n",
+      "5      67932\n",
+      "4      64923\n",
+      "8      60943\n",
+      "3      58765\n",
+      "2      46384\n",
+      "9      39477\n",
+      "14     33239\n",
+      "10     31811\n",
+      "1      30295\n",
+      "11     27014\n",
+      "13     27000\n",
+      "12     25137\n",
+      "15     21590\n",
+      "16     14706\n",
+      "21     14518\n",
+      "20     12816\n",
+      "17     12580\n",
+      "18     12048\n",
+      "22     10183\n",
+      "19     10080\n",
+      "28      8532\n",
+      "23      7620\n",
+      "24      6687\n",
+      "27      6384\n",
+      "29      6367\n",
+      "26      6076\n",
+      "25      5876\n",
+      "Name: days_since_prior_order, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Categorizing customers as new, returning or loyal\n",
+    "\n",
+    "#This is based on the days_since_prior_order column\n",
+    "\n",
+    "#First, we check the unique values and their count\n",
+    "\n",
+    "uniqueValuesCount = df[\"days_since_prior_order\"].value_counts()\n",
+    "print(\"The Unique values in 'days_since_prior_order' column are: \\n\", uniqueValuesCount)\n",
     "\n",
     "#New customers have days since their prior purchase as 0\n",
     "\n",
     "#Returning customers have only 2 sets of occurences\n",
     "\n",
-    "# Loyal customers are those with few days since their prior purchase "
+    "# Loyal customers are those with few days since their prior purchase \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4b962190",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        order_id                                           user_ids  \\\n",
+      "0             11           [143742, 143742, 143742, 143742, 143742]   \n",
+      "1             64                     [5430, 5430, 5430, 5430, 5430]   \n",
+      "2            110  [73241, 73241, 73241, 73241, 73241, 73241, 732...   \n",
+      "3            192  [189954, 189954, 189954, 189954, 189954, 18995...   \n",
+      "4            205                           [190709, 190709, 190709]   \n",
+      "...          ...                                                ...   \n",
+      "103756   3420964  [69985, 69985, 69985, 69985, 69985, 69985, 699...   \n",
+      "103757   3420977                   [109561, 109561, 109561, 109561]   \n",
+      "103758   3420991  [186459, 186459, 186459, 186459, 186459, 18645...   \n",
+      "103759   3421027  [51127, 51127, 51127, 51127, 51127, 51127, 511...   \n",
+      "103760   3421074                   [167185, 167185, 167185, 167185]   \n",
+      "\n",
+      "        user_count  \n",
+      "0                5  \n",
+      "1                5  \n",
+      "2               10  \n",
+      "3               15  \n",
+      "4                3  \n",
+      "...            ...  \n",
+      "103756           9  \n",
+      "103757           4  \n",
+      "103758          13  \n",
+      "103759          12  \n",
+      "103760           4  \n",
+      "\n",
+      "[103761 rows x 3 columns]\n",
+      "User IDs with a single order: [150283 51359 40125 ... 205088 92105 175301]\n",
+      "User IDs with multiple orders: [143742 5430 73241 ... 161015 69985 167185]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To properly segement customers:\n",
+    "#: Group dataset by order_id , since, when some orders a group of items, they are all put together under 1 order_id for that specific instance\n",
+    "#Therefore, we can have a user_id with more than 1 unique order_id which shows that they have ordered more than once\n",
+    "\n",
+    "order_groups = df.groupby('order_id')['user_id'].agg(user_ids=list).reset_index()\n",
+    "# Analyze the behavior of 'user_id'\n",
+    "order_groups['user_count'] = order_groups['user_ids'].apply(len)\n",
+    "\n",
+    "# Display the DataFrame showing order_id, user_ids, and user_count\n",
+    "print(order_groups)\n",
+    "\n",
+    "# Identify user_ids that appear only once and those that appear more than once\n",
+    "single_orders = order_groups[order_groups['user_count'] == 1]['user_ids'].explode().unique()\n",
+    "multiple_orders = order_groups[order_groups['user_count'] > 1]['user_ids'].explode().unique()\n",
+    "\n",
+    "print(\"User IDs with a single order:\", single_orders)\n",
+    "print(\"User IDs with multiple orders:\", multiple_orders)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d882b8e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
